Refactor with JDK9+ #9